# vito-reg

./: CMakeLists.txt
ports/centurion/: portfile.cmake  usage  vcpkg.json
ports/centurion-vg/: portfile.cmake  vcpkg.json
ports/circt/: portfile.cmake  usage  vcpkg.json
ports/circt-llvm/: portfile.cmake  usage  vcpkg.json
ports/foonathan-lexy/: portfile.cmake  usage  vcpkg.json
ports/modlib/: portfile.cmake  vcpkg.json
ports/navidson/: portfile.cmake  vcpkg.json
ports/vdap/: portfile.cmake  vcpkg.json
ports/ztd-text/: portfile.cmake  usage  vcpkg.json
versions/: baseline.json
versions/c-/: centurion-vg.json  centurion.json  circt-llvm.json  circt.json
versions/f-/: foonathan-lexy.json
versions/m-/: modlib.json
versions/n-/: navidson.json
versions/v-/: vdap.json
versions/z-/: ztd-text.json
